MSL-330: adding song artist album on users library
MSL-331: Add real implementation of removing a song artist or album on a user library
