# server/src/main/java/com/kenzan/msl/server/services/CatalogService.java
@@ -74,4 +74,14 @@ public interface CatalogService {
      */
     Observable<MyLibrary> getMyLibrary(String sessionToken);
 
+    /*
+     * Add a data to a specific user library
+     */
+    void addToLibrary(String id, String sessionToken, String contentType);
+
+    /*
+     * Remove data from a user library
+     */
+    void removeFromLibrary(String object_id, String timestamp, String sessionToken, String contentType);
+
 }
